updated with  new model for prediction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6375,7 +6375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  RandomForest Claasifier"
+    "##  RandomForest Classifier"
    ]
   },
   {
@@ -11531,14 +11531,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training Balance Dataset of best performing models"
+    "# Training Balance Dataset of best performing models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter Tuning For Linear Regression Model"
+    "## Hyperparameter Tuning For Logistic Regression Model"
    ]
   },
   {
@@ -11733,7 +11733,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter Tuning For Gradient Boosting Model"
+    "## Hyperparameter Tuning For Gradient Boosting Model"
    ]
   },
   {
