Updated with prediction by gradient boosting model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13012,7 +13012,7 @@
     }
    ],
    "source": [
-    "# Loading the pre-trained logistic regression pipeline and encoder models\n",
+    "# Loading the pre-trained gradient boosting pipeline and encoder models\n",
     "GB_pipeline_balanced_2 = joblib.load('./models/Gradient_boosting_model.joblib')\n",
     "encoder = joblib.load('./models/encoder.joblib')\n",
     "\n",
