Updated with gradient boosting model for prediction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13500,7 +13500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The number of customers who chunred predicted by the gradient boosting model is 409 while that of customers who did not churn is 1591. This indicates that the gradient boosting model will perform better tan the linear regression model."
+    "* The number of customers who chunred predicted by the gradient boosting model is 409 while that of customers who did not churn is 1591."
    ]
   }
  ],
